--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-typing-animation": "^0.5.4",
+    "angular2-materialize": "^15.1.10",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "materialize-css": "^0.100.2",
     "rxjs": "^5.5.6",
+    "typed.js": "^2.0.7",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
