--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.100.2",
+    "ng-sticky": "^0.1.5",
     "rxjs": "^5.5.6",
     "typed.js": "^2.0.7",
     "zone.js": "^0.8.19"
